<resources>
    <string name="app_name">주유주유소</string>
    <string name="splash_subject">가까운 주유소는 어디서?</string>
    <string name="splash_text">가까운 주유소는 어디서?</string>
    <string name="base_navi_desc">기본 네비게이션을 설정합니다</string>
    <string name="base_oil_desc">기본 유종을 설정합니다</string>
    <string name="btton_next"><![CDATA[다음 >]]></string>
    <string name="auth_rationale_msg">주유주유소를 이용하시려면 위치 권한을 허용해주세요.</string>
    <string name="auth_denied_msg">현재위치 주변 주유소 검색을 위해 위치 권한이 필수로 필요합니다.</string>
    <string name="sort_distance">거리순 보기</string>
    <string name="sort_price">가격순 보기</string>
    <string name="setting">설정</string>
    <string name="close">닫기</string>
    <string name="won">원</string>
    <string name="km">km</string>
    <string name="find_setting">찾기 설정</string>
    <string name="find_distance">찾기 범위</string>
    <string name="oil_type">오일 타입</string>
    <string name="gas_station_type">주유소 브랜드</string>
    <string name="sort_type">정렬기준</string>
    <string name="map_type">연동지도 서비스</string>
    <string name="etc">기타</string>
    <string name="maker">만든 사람들</string>
    <string name="reporting">버그리포팅 및 제안</string>
    <string name="review_write">리뷰 남기기</string>
    <string name="left_arrow">&gt;</string>
    <string name="right_arrow">&lt;</string>
    <string name="not_install_google_map">구글맵이 설치되어 있지 않습니다.</string>
    <string name="app_ver">ver 1.0.1</string>
    <string name="maker_desc">운전하느라 고생이 많은\n대한민국 모든분들께 이 앱을 바칩니다.</string>
    <string name="maker_idea">Main Idea</string>
    <string name="maker_idea_name">HONGIL YOON</string>
    <string name="maker_dev_1">LEAD Android Developer</string>
    <string name="maker_dev_1_name">WOO SEUNG KIM</string>
    <string name="maker_dev_2">LEAD iOS Developer</string>
    <string name="maker_dev_2_name">SANGYOON WOO</string>
    <string name="maker_dev_3">JUNIOR iOS Developer</string>
    <string name="maker_dev_3_name">HONGIL YOON\nILHWAN RYU</string>
    <string name="maker_dev_4">LEAD UI/UX Designer</string>
    <string name="maker_dev_4_name">ILHWAN RYU</string>
    <string name="supporter">Supporter</string>
    <string name="supporter_name">YEONJI JANG</string>
    <string name="email_subject">[주유주유소] 문의</string>
    <string name="email_fail">메일을 보낼 수 없습니다.</string>
    <string name="location_setting_title">위치 서비스</string>
    <string name="location_setting_message">주유소 검색을 위해 위치 서비스를 켜야 합니다.</string>
    <string name="location_setting">설정</string>
    <string name="update">업데이트</string>
    <string name="alert_new_version">새로운 버전이 등록되었습니다.\n지금 바로 업데이트해주세요!</string>
    <string name="alert_empty_market_message">마켓이 설치되지 않았습니다.</string>
    <string name="alert_fail_connect_market">마켓 연결에 실패하였습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="can_not_find_location">위치 정보 가져오기에 실패하였습니다.</string>
    <string name="loading_location">위치 정보 로딩중...</string>
    <string name="admob_key">ca-app-pub-5712365969973829/1769662341</string>

</resources>
